Video Configuration settled..
